# StixxEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  DISABLED.travis.yml  README.md  SetupVisualStudio.bat  bitbucket-pipelines.yml
docs/: ComponentDiagram.xml  Untitled Diagram.xml
examples/: CMakeLists.txt  gay.cpp  helloTriangle.cpp  main.cpp
source/: CMakeLists.txt  GameContainerMac.cpp  GameContainerMac.h  MeshGL.cpp  MeshGL.h  MeshGL.hpp  ShaderGL.cpp  ShaderGl.cpp  ShaderGl.h  main.cpp
source/SxCoreLib/: CMakeLists.txt
source/SxCoreLib/include/: GameContainer.h  Mesh.h  Shader.h  ShaderLoader.hpp  ShaderRaw.hpp
source/SxCoreLib/src/: Shader.cpp  ShaderRaw.cpp
source/examples/: CMakeLists.txt
source/shaders/: main.shdr
stixx/: CMakeLists.txt
stixx/assimp/: assimp.cmake
stixx/assimp/src/: AssetImporterAssimp.cpp
stixx/include/: FileSystem.hpp  InputGlfw.hpp  MeshLoaderAssimp.hpp  Observer.hpp  Window.hpp  WindowGlfw.hpp
stixx/include/interactors/: InputInteractor.hpp
stixx/include/interfaces/: AssetImporter.hpp  Camera.hpp  Window.hpp
stixx/include/interfaces/renderer/: Renderer.hpp  Surface.hpp
stixx/include/utils/: CastOperator.hpp  SpinLock.hpp
stixx/interfaces/: Mesh.hpp  MeshLoader.hpp  Scene.hpp  Shader.h  ShaderLoader.hpp
stixx/src/: FileSystem.cpp  ShaderLoader.cpp  WindowGlfw.cpp
stixx/src/utils/: SpinLock.cpp
stixx/test/: CMakeLists.txt
stixx/test/mocks/: DeviceMock.hpp  PhysicalDeviceMock.hpp  WindowMock.hpp
stixxCore/: CMakeLists.txt  MeshLoaderAssimp.hpp
stixxCore/assimp/: assimp.cmake
stixxCore/assimp/include/: AssetImporterAssimp.hpp
stixxCore/include/: Application.hpp  DeviceMemoryAllocator.hpp  FileSystem.hpp  InputGlfw.hpp  MeshLoaderAssimp.hpp  Observer.hpp  Renderer.hpp  UiHandlerGlfw.hpp  Window.hpp  WindowGlfw.hpp
stixxCore/include/interactors/: InputInteractor.hpp
stixxCore/include/interfaces/: Input.hpp  MeshLoader.hpp
stixxCore/include/interfaces/renderer/: Renderer.hpp
stixxCore/include/utils/: CastOperator.hpp  SpinLock.hpp
stixxCore/interfaces/: CastOperator.hpp  FileSystem.hpp  Input.hpp  Mesh.hpp  MeshLoader.hpp  MeshLoaderAssimp.hpp  Shader.h  UiHandler.hpp  Window.hpp
stixxCore/interfaces/renderer/: Device.hpp  DeviceMemory.hpp  Mesh.hpp  Model.hpp  PhysicalDevice.hpp  Renderer.hpp  Surface.hpp
stixxCore/interfaces/util/: Observer.hpp
stixxCore/src/: .WindowGlfw.cpp.swp  DeviceMemoryAllocator.cpp  FileSystem.cpp  InputGlfw.cpp  MeshLoaderAssimp.cpp  Observer.cpp  ShaderLoader.cpp  UiHandlerGlfw.cpp  WindowGlfw.cpp
stixxCore/src/interactors/: InputInteractor.cpp
stixxCore/src/utils/: SpinLock.cpp
stixxCore/test/: CMakeLists.txt  ObserverTest.cpp  TestDeviceMemoryAllocator.cpp  test.cpp
stixxCore/test/mocks/: DeviceMemoryMock.hpp
stixxGL/: MeshGL.cpp  ShaderGL.hpp
stixxImplGL/: MeshGL.hpp
stixxImplVulkan/: CMakeLists.txt
stixxImplVulkan/include/: DeviceVulkan.hpp  HandleExposer.hpp  InstanceVulkan.hpp  PipelineVulkan.hpp  RenderPassVulkan.hpp  RendererVulkan.hpp  ShaderVulkan.hpp  SurfaceVulkan.hpp  SwapchainVulkan.hpp
stixxImplVulkan/src/: DeviceVulkan.cpp  InstanceVulkan.cpp  PipelineVulkan.cpp  RenderPassVulkan.cpp  RendererVulkan.cpp  ShaderVulkan.cpp  SurfaceVulkan.cpp  SwapchainVulkan.cpp
stixxImplVulkan/test/: CMakeLists.txt  TestRenderer.cpp
stixxShaders/: CMakeLists.txt  CompileGLSL.cmake  fragment.frag  main.vert  vert.spv
stixxViewer/: CMakeLists.txt  main.cpp
stixxVulkan/: CMakeLists.txt
stixxVulkan/include/: DeviceMemoryAllocatorVulkan.hpp  DeviceMemoryVulkan.hpp  DeviceVulkan.hpp  InstanceVulkan.hpp  MemoryLoaderVulkan.hpp  ModelVulkan.hpp  PhysicalDeviceVulkan.hpp  PipelineVulkan.hpp  RenderPassVulkan.hpp  RendererVulkan.hpp  ShaderVulkan.hpp  SurfaceVulkan.hpp  SwapchainVulkan.hpp  VulkanStack.hpp
stixxVulkan/src/: DeviceMemoryAllocatorVulkan.cpp  DeviceMemoryVulkan.cpp  DeviceVulkan.cpp  InstanceVulkan.cpp  MemoryLoaderVulkan.cpp  ModelVulkan.cpp  PhysicalDeviceVulkan.cpp  PipelineVulkan.cpp  RenderPassVulkan.cpp  RendererVulkan.cpp  ShaderVulkan.cpp  SurfaceVulkan.cpp  SwapchainVulkan.cpp  VulkanStack.cpp
stixxVulkan/test/: CMakeLists.txt  TestRenderer.cpp
stixxVulkan/test/mocks/: VulkanMock.hpp
